[tool.poetry]
name = "qnm-npom"
version = "1.0"
description = ""
authors = ["Eoin Elliott"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"
plotly = "^5.2.1"
streamlit = "^0.86.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
