[tool.poetry]
name = "qnm-npom"
version = "0.1.0"
description = ""
authors = ["Eoin Elliott"]

[tool.poetry.dependencies]
python = "*"
plotly = "*"
streamlit = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
