[tool.poetry]
name = "qnm-npom"
version = "1.0.0"
description = ""
authors = ["Eoin Elliott"]

[tool.poetry.dependencies]
python = "3*"
streamlit = ">=0.86"
plotly = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
